# SteamPulse

./: .dockerignore  .env.example  .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  pull_request_description.md
.github/workflows/: build.yml  ci.yml  docker.yml
docker/: Dockerfile  entrypoint.sh  nginx.conf  scheduler.sh  supervisord.conf
docs/: user-guide.md
docs/en/: developer-guide.md  user-guide.md
docs/fr/: developer-guide.md  user-guide.md
docs/releases/: v2.1.0.md
steam_tracker/: __init__.py  alerts.py  api.py  cli.py  config.py  db.py  epic_api.py  fetcher.py  gamepass_api.py  gog_api.py  models.py  renderer.py  resolver.py  server.py  steamcmd_api.py  wizard.py
steam_tracker/i18n/: __init__.py  en.py  fr.py
steam_tracker/sources/: __init__.py  epic.py  gamepass.py  gog.py  steam.py
tests/: conftest.py  test_alerts.py  test_api.py  test_cli.py  test_config.py  test_db.py  test_epic.py  test_fetcher.py  test_gamepass_api.py  test_gog_api.py  test_renderer.py  test_resolver.py  test_server.py  test_sources.py  test_steamcmd_api.py  test_wizard.py
